[gd_scene load_steps=10 format=3 uid="uid://purificateur_uid_123"]

[ext_resource type="Texture2D" uid="uid://6nx03k6si5k7" path="res://Assets/SpriteSVG/plain-circle.svg" id="1_purificateur"]
[ext_resource type="PackedScene" uid="uid://b2mg3mjjofsdt" path="res://Composants/CMP_Movement.tscn" id="2_movement"]
[ext_resource type="PackedScene" uid="uid://bjddgxoyv846g" path="res://Composants/CMP_navigation.tscn" id="3_navigation"]
[ext_resource type="Texture2D" uid="uid://b1mvw0ooc4w68" path="res://Assets/SpriteSVG/plain-square.svg" id="4_indicator"]
[ext_resource type="PackedScene" uid="uid://dfhf540m5sc3n" path="res://Composants/Attacks/CMP_AttackParent.tscn" id="5_attack"]
[ext_resource type="PackedScene" uid="uid://c3int3imsbao6" path="res://Composants/CMP_Vie.tscn" id="6_life"]
[ext_resource type="PackedScene" uid="uid://pvpo8kprkut3" path="res://Composants/CMP_AgressionManager.tscn" id="7_aggression"]
[ext_resource type="Script" path="res://Assets/Script/SCR_Purificateur.gd" id="8_script"]

[sub_resource type="CircleShape2D" id="CircleShape2D_purificateur"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_heal_aura"]
radius = 120.0

[node name="ENT_Purificateur" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("8_script")

[node name="CMP_movement" parent="." node_paths=PackedStringArray("navigationComponent") instance=ExtResource("2_movement")]
navigationComponent = NodePath("../CMP_Navigation")
speed = 80.0
ennemy = true

[node name="CMP_Navigation" parent="." instance=ExtResource("3_navigation")]

[node name="SpriteCorps" type="Sprite2D" parent="."]
modulate = Color(0.95, 0.9, 0.7, 1.0)
scale = Vector2(0.06, 0.06)
texture = ExtResource("1_purificateur")

[node name="SpriteArmure" type="Sprite2D" parent="SpriteCorps"]
modulate = Color(0.8, 0.8, 0.9, 0.9)
position = Vector2(0, -20)
scale = Vector2(1.2, 1.4)
texture = ExtResource("4_indicator")

[node name="SpriteBouclier" type="Sprite2D" parent="SpriteCorps"]
modulate = Color(0.9, 0.85, 0.6, 1.0)
position = Vector2(-70, 0)
rotation = 0.2
scale = Vector2(0.8, 1.3)
texture = ExtResource("4_indicator")

[node name="SpriteMarteau" type="Sprite2D" parent="SpriteCorps"]
modulate = Color(0.7, 0.6, 0.5, 1.0)
position = Vector2(80, -10)
rotation = -0.4
scale = Vector2(0.4, 1.5)
texture = ExtResource("4_indicator")

[node name="SpriteCasque" type="Sprite2D" parent="SpriteCorps"]
modulate = Color(0.8, 0.75, 0.6, 1.0)
position = Vector2(0, -90)
scale = Vector2(0.9, 0.7)
texture = ExtResource("4_indicator")

[node name="SpriteAileDroite" type="Sprite2D" parent="SpriteCorps"]
modulate = Color(1.0, 1.0, 0.9, 0.7)
position = Vector2(-120, -30)
rotation = -0.6
scale = Vector2(0.6, 1.8)
texture = ExtResource("4_indicator")

[node name="SpriteAileGauche" type="Sprite2D" parent="SpriteCorps"]
modulate = Color(1.0, 1.0, 0.9, 0.7)
position = Vector2(120, -30)
rotation = 0.6
scale = Vector2(0.6, 1.8)
texture = ExtResource("4_indicator")

[node name="SpriteHalo" type="Sprite2D" parent="SpriteCorps"]
modulate = Color(1.0, 0.95, 0.7, 0.6)
position = Vector2(0, -120)
scale = Vector2(1.5, 0.3)
texture = ExtResource("1_purificateur")

[node name="SpriteOmbre" type="Sprite2D" parent="."]
modulate = Color(0.3, 0.3, 0.4, 0.3)
scale = Vector2(0.055, 0.055)
texture = ExtResource("1_purificateur")
z_index = -1

[node name="SpriteYeux" type="Sprite2D" parent="."]
modulate = Color(0.2, 0.8, 1.0, 1.0)
position = Vector2(1.8, -2)
scale = Vector2(0.01, 0.01)
texture = ExtResource("1_purificateur")

[node name="SpriteYeux2" type="Sprite2D" parent="."]
modulate = Color(0.2, 0.8, 1.0, 1.0)
position = Vector2(-1.8, -2)
scale = Vector2(0.01, 0.01)
texture = ExtResource("1_purificateur")

[node name="AuraDivine" type="Sprite2D" parent="."]
modulate = Color(1.0, 0.9, 0.7, 0.2)
scale = Vector2(0.12, 0.12)
texture = ExtResource("1_purificateur")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_purificateur")

[node name="CMP_AttackParent" parent="." instance=ExtResource("5_attack")]
TrackedCollision = 2

[node name="CmpVie" parent="." instance=ExtResource("6_life")]
Max_life = 8

[node name="CmpAgressionManager" parent="." node_paths=PackedStringArray("movementControler") instance=ExtResource("7_aggression")]
collision_layer = 2
collision_mask = 2
movementControler = NodePath("../CMP_movement")
defensive_mode = true

[node name="HealAura" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="HealAuraShape" type="CollisionShape2D" parent="HealAura"]
shape = SubResource("CircleShape2D_heal_aura")
debug_color = Color(0.2, 1.0, 0.4, 0.1)

[node name="HealTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="ShieldTimer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="PrayerTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="ResurrectionTimer" type="Timer" parent="."]
wait_time = 15.0
autostart = false

[node name="EffetSoin" type="CPUParticles2D" parent="."]
emitting = false
amount = 12
lifetime = 2.0
speed_scale = 0.8
direction = Vector2(0, -1)
spread = 30.0
initial_velocity_min = 20.0
initial_velocity_max = 40.0
scale_amount_min = 0.2
scale_amount_max = 0.5
color = Color(0.2, 1.0, 0.4, 0.7)

[node name="EffetBouclier" type="CPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 1.5
speed_scale = 1.2
direction = Vector2(0, 0)
spread = 360.0
initial_velocity_min = 30.0
initial_velocity_max = 60.0
scale_amount_min = 0.1
scale_amount_max = 0.3
color = Color(0.8, 0.8, 1.0, 0.8)

[node name="EffetPriere" type="CPUParticles2D" parent="."]
emitting = false
amount = 8
lifetime = 3.0
speed_scale = 0.5
direction = Vector2(0, -1)
spread = 15.0
initial_velocity_min = 10.0
initial_velocity_max = 25.0
scale_amount_min = 0.3
scale_amount_max = 0.7
color = Color(1.0, 0.9, 0.7, 0.6)

[connection signal="death" from="CmpVie" to="." method="_on_cmp_vie_death"] 